fixed alignments

--- a/css/index.css
+++ b/css/index.css
@@ -35,7 +35,8 @@ body {
     align-content: center;
     justify-content: center;
     text-align: left;
-    margin-left: 10em;
+    margin-left: 14em;
+    margin-right: 11em;
 }
 
 .flex-box-intro-column>h1 {
@@ -58,6 +59,7 @@ body {
     flex-wrap: wrap;
     align-content: center;
     justify-content: center;
+    margin-top: 50px;
 }
 
 .flex-box-m {
@@ -69,6 +71,11 @@ body {
     text-align: center;
     width: 552px;
     height: 461px;
+    margin-right: 15px;
+    background-color: #355CA7;
+    color: #FFF;
+    border-radius: 10px;
+    padding: 30px 20px 0 20px;
 }
 
 .flex-box-s {
@@ -80,6 +87,21 @@ body {
     text-align: center;
     width: 552px;
     height: 461px;
+    margin-left: 15px;
+    background-color: #355CA7;
+    color: #FFF;
+    border-radius: 10px;
+    padding: 40px 20px 0 20px;
+}
+
+.flex-box-m>img {
+    width: auto;
+    height: 80px;
+}
+
+.flex-box-s>img {
+    width: auto;
+    height: 80px;
 }
 
 .flex-box-m>h1 {
@@ -88,14 +110,20 @@ body {
     font-weight: 700;
 }
 
+.flex-box-s>h1 {
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+}
+
 .flex-box-m>p {
-    font-size: 19px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
 }
 
 .flex-box-s>p {
-    font-size: 19px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
 }
@@ -107,4 +135,6 @@ body {
 .main-km-2 {
     width: 409px;
     height: 380px;
+    margin-top: 5.5%;
+    margin-bottom: 5.5%;
 }
